# whatsapp-mcp

./: .codecov.yml  .gitignore  .semgrep.yml  .tdd-guard.yml  .trivyignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEEP_HISTORY_IMPLEMENTATION.md  GOOGLE_DRIVE_BACKUP_IMPORT.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  MIGRATE-TO-WACLI.md  QUICKSTART.md  README.md  README.old.md  SECURITY_ANALYSIS.md  TROUBLESHOOTING.md  check-bridges.sh  cleanup-bridges.sh  constitution.md  diagnose-bridges.sh  fetch_deep_history.py  start-bridges.sh  stop-bridges.sh  sync_all_history.py  unified_mcp
.claude/: mcp.json
.github/workflows/: ci.yml  security.yml
baileys-bridge/: package-lock.json  package.json
baileys-bridge/auth_baileys/: app-state-sync-key-AAAAAMJd.json  app-state-sync-key-AAAAAMJe.json  app-state-sync-key-AAAAAMJf.json  app-state-sync-key-AAAAAMJg.json  app-state-sync-key-AAAAAMJh.json  app-state-sync-key-AAAAAMJi.json  app-state-sync-key-AAAAAMJj.json  app-state-sync-key-AAAAAMJk.json  app-state-sync-key-AAAAAMJl.json  app-state-sync-key-AAAAAMJm.json  app-state-sync-version-critical_block.json  app-state-sync-version-regular.json  app-state-sync-version-regular_high.json  app-state-sync-version-regular_low.json  creds.json  pre-key-12.json  pre-key-14.json  pre-key-19.json  pre-key-24.json  pre-key-25.json  pre-key-28.json  pre-key-31.json  pre-key-32.json  pre-key-33.json  pre-key-35.json  pre-key-37.json  pre-key-38.json  pre-key-40.json  pre-key-42.json  pre-key-45.json  pre-key-5.json  pre-key-57.json  pre-key-59.json  pre-key-60.json  pre-key-63.json  pre-key-66.json  pre-key-67.json  pre-key-69.json  pre-key-70.json  pre-key-71.json  (+346 more)
baileys-bridge/migrations/: 001_add_sync_checkpoints.sql  002_add_message_indexes.sql
baileys-bridge/src/: database.ts  main.ts
baileys-bridge/src/models/: sync_checkpoint.ts
baileys-bridge/src/routes/: business.ts  history.ts  polls.ts  privacy.ts  status.ts
baileys-bridge/src/services/: baileys_client.ts  database.ts  health.ts
docs/: ARCHITECTURE_DIAGRAMS.md  BACKEND_ROUTING.md  COMMON_PATTERNS.md  ERROR_HANDLING.md  STYLE_GUIDE.md  TEMPLATES.md
docs/examples/: basic-messaging.md  community-management.md  hybrid-operations.md
docs/plans/: 2026-02-25-wacli-migration-design.md
scripts/: format-all.sh  run-all-tests.sh  run-quality-checks.sh
specs/001-add-comprehensive-test/: SUCCESS_CRITERIA_VERIFICATION.md  TESTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-add-comprehensive-test/checklists/: requirements.md
specs/001-add-comprehensive-test/contracts/: conftest_template.py  test_data_schemas.py
specs/002-add-ci-cd/: SUCCESS_CRITERIA_VERIFICATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-ci-cd/checklists/: requirements.md
specs/002-add-ci-cd/contracts/: ci-workflow.yml  security-workflow.yml
specs/003-improve-code-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-improve-code-quality/checklists/: requirements.md
specs/003-improve-code-quality/contracts/: README.md  __init__.py.template  constants.py.template  docstring.example.py  pyproject.toml.template
specs/004-implement-whatsapp-deep/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-implement-whatsapp-deep/checklists/: requirements.md
specs/004-implement-whatsapp-deep/contracts/: history-sync-api.yaml
tests/: test_integration.py  test_single_message.py
tests/e2e/: README.md  test_community_workflow.py  test_newsletters.py  test_poll_workflow.py  test_privacy.py
tests/integration/: README.md  test_message_query.py
unified-mcp/: .coverage  CODE_METRICS_REPORT.md  SUCCESS_CRITERIA_VERIFICATION.md  __init__.py  constants.py  main.py  pyproject.toml  routing.py  sync.py
unified-mcp/.github/workflows/: tests.yml
unified-mcp/.serena/: project.yml
unified-mcp/backends/: __init__.py  baileys_client.py  go_client.py  health.py
unified-mcp/models/: __init__.py
unified-mcp/tests/: conftest.py
unified-mcp/tests/e2e/: conftest.py  test_hybrid_workflows.py
unified-mcp/tests/integration/: conftest.py  docker-compose.yml  test_concurrent_operations.py  test_failover.py
unified-mcp/tests/unit/: conftest.py  test_routing.py  test_sync.py
unified-mcp/tests/unit/backends/: test_health.py
whatsapp-bridge/: business.go  chats.go  communities.go  contacts.go  go.mod  go.sum  groups.go  main.go  main.go.backup  messaging.go  newsletters.go  populate_group_members.go  privacy.go  test_resolution.py
whatsapp-bridge/migrations/: 000_create_migrations_table.sql  001_add_community_support.sql  002_add_message_metadata.sql  003_add_sync_checkpoints.sql
whatsapp-bridge/services/: database.go  health.go  migrations.go  whatsmeow_client.go
whatsapp-mcp-server/: main.py  run-nix.sh  whatsapp.py
